Fixed score. Remove OT from score. Removing OT is slightly buggy. Could use some work. Set overflow-x to hidden.

--- a/v4/scoreboardv4.css
+++ b/v4/scoreboardv4.css
@@ -7,12 +7,13 @@
 #tbody {
 	height: 220px;
 	overflow-y: auto;
+	overflow-x: hidden;
 }
 
 table{
 	border-collapse: collapse;
 	table-layout: fixed;
-	width:320px;
+	width:305px;
 	font-size: 12px;
 
 }
